--- a/src/reservation/index.html
+++ b/src/reservation/index.html
@@ -139,6 +139,10 @@
         <p class="mod__annotation-txt">
           2営業日以内に当店からの返信が無い場合、お手数ですが改めてご連絡をお願い致します。
         </p>
+
+        <p class="mod__annotation-txt">
+          キャンセルの際は事前にご連絡をお願い致します。
+        </p>
       </section>
     </div>
     <!-- メインコンテンツはここまで -->
