metaディスクリプションの修正
短過ぎると良くないようなので文章を追加

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="format-detection" content="telephone=no,email=no,address=no">
   <title>CLAN -ヘアサロン クラン- 大分/府内町の美容室</title>
-  <meta name="description" content="大分駅から徒歩5分 府内町の美容室CLANの公式WEBサイトです。">
+  <meta name="description" content="大分駅から徒歩5分 府内町の美容室CLANの公式WEBサイトです。完全予約制でお客様一人一人のライフスタイルを考慮した上でスタイリングやヘアケアに関するアドバイスを致します。">
 
   <!-- ファビコンの読み込み -->
   <link rel="icon" href="/common/img/favicon.ico">
@@ -111,7 +111,7 @@
               落ち着いた空間が広がる<br class="sp_only">マンツーマンの<br class="sp_only">プライベートサロン
             </p>
             <p class="normal-txt first-paragraph">
-              完全予約制でお客様一人ひとりのライフスタイルを考慮した上でスタイリングやヘアケアに関するアドバイスを致します。
+              完全予約制でお客様一人一人のライフスタイルを考慮した上でスタイリングやヘアケアに関するアドバイスを致します。
             </p>
 
             <div class="mod__txt-link_wrapper">
