--- a/src/reservation/index.html
+++ b/src/reservation/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000">
   <meta name="format-detection" content="telephone=no,email=no,address=no">
   <title>ご予約方法 | CLAN -ヘアサロン クラン- 大分/府内町の美容室</title>
-  <meta name="description" content="大分駅から徒歩5分 府内町の美容室CLANの「ご予約方法」に関するページです。">
+  <meta name="description" content="大分駅から徒歩5分 府内町の美容室CLANの「ご予約方法」に関するページです。LINEやInstagramからご予約いただけます。">
 
   <!-- ファビコンの読み込み -->
   <link rel="icon" href="/common/img/favicon.ico">
