カルーセルのページネーションサイズ調整
bodyの背景色も白色に設定

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
   <meta property="og:url" content="https://clan-hairsalon.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="CLAN -ヘアサロン クラン- 大分/府内町の美容室" />
-  <meta property="og:description" content="大分駅から徒歩5分 府内町の美容室CLANの公式WEBサイトです。" />
+  <meta property="og:description" content="大分駅から徒歩5分 府内町の美容室CLANの公式WEBサイトです。完全予約制でお客様一人一人のライフスタイルを考慮した上でスタイリングやヘアケアに関するアドバイスを致します。" />
   <meta property="og:site_name" content="CLAN -ヘアサロン クラン- 大分/府内町の美容室" />
   <meta property="og:image" content="https://clan-hairsalon.com/common/img/ogp-img.jpg" />
   <!-- OGPの設定はここまで -->
