metaのテーマカラー変更
テーマカラーというmetaが設定されていたことを初めて知り、白色に変更

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#ffffff">
   <meta name="format-detection" content="telephone=no,email=no,address=no">
   <title>CLAN -ヘアサロン クラン- 大分/府内町の美容室</title>
   <meta name="description" content="大分駅から徒歩5分 府内町の美容室CLANの公式WEBサイトです。完全予約制でお客様一人一人のライフスタイルを考慮した上でスタイリングやヘアケアに関するアドバイスを致します。">
