--- a/src/reservation/index.html
+++ b/src/reservation/index.html
@@ -4,7 +4,7 @@
 <head prefix=”og: https://ogp.me/ns# fb: https://ogp.me/ns/fb# article: https://ogp.me/ns/article#”>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#000000">
+  <meta name="theme-color" content="#ffffff">
   <meta name="format-detection" content="telephone=no,email=no,address=no">
   <title>ご予約方法 | CLAN -ヘアサロン クラン- 大分/府内町の美容室</title>
   <meta name="description" content="大分駅から徒歩5分 府内町の美容室CLANの「ご予約方法」に関するページです。LINEやInstagramからご予約いただけます。">
