スマホ表示のヘッダーデザイン修正
ハンバーガーボタンの色をグレーに変更、メニューを開いた際にロゴが表示されるように修正

--- a/src/common/inc/header.html
+++ b/src/common/inc/header.html
@@ -77,6 +77,12 @@
   <!-- クリック無しで常に表示されている範囲 -->
   <div class="header_inner flex_wrapper">
 
+    <!-- CLANのロゴ -->
+    <div class="header-logo_wrapper img_wrapper" id="sp_logo">
+      <img src="/common/img/logo.png" alt="CLANのロゴ">
+    </div>
+    <!-- CLANのロゴはここまで -->
+
     <!-- 予約ボタン -->
     <div class="reserve-btn_wrapper" id="reserve-btn">
       <a class="reserve-btn" href="/reservation/">
